--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -68,7 +68,7 @@ const today = new Date();
             </svg>
           </a>
           <a
-            href="https://twitter.com/build2learn_in"
+            href="https://twitter.com/build2learn_c"
             target="_blank"
             class="text-gray-500 hover:text-gray-700"
           >
