--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -82,7 +82,7 @@ import Announcement from '../components/announcement.astro';
           </svg>
         </a>
         <a
-          href="https://twitter.com/build2learn_in"
+          href="https://twitter.com/build2learn_c"
           target="_blank"
           class="text-gray-500 hover:text-gray-700"
         >
