--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,11 @@ interface Props {
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const allowIndexing = import.meta.env.SITE === 'build2learn.in';
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const {
+  title,
+  description,
+  image = '/images/about_us_hero.webp',
+} = Astro.props;
 ---
 
 <!-- Global Metadata -->
