--- a/src/layouts/EventLayout.astro
+++ b/src/layouts/EventLayout.astro
@@ -6,15 +6,16 @@ import Footer from '../components/Footer.astro';
 interface Props {
   title: string;
   description?: string;
+  image?: string;
 }
 
-const { title, description = '' } = Astro.props;
+const { title, description = '', image } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
+    <BaseHead title={title} description={description} image={image} />
   </head>
   <body>
     <Header />
