--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -5,10 +5,11 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 import SocialShareButtons from '../components/SocialShareButtons.astro';
+import BlogAuthor from '../components/BlogAuthor.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage, tags } =
+const { title, description, pubDate, updatedDate, heroImage, tags, authors } =
   Astro.props;
 ---
 
@@ -73,6 +74,7 @@ const { title, description, pubDate, updatedDate, heroImage, tags } =
                 )
               }
             </div>
+            <BlogAuthor authorKeys={authors} />
             <h1>{title}</h1>
             <hr />
           </div>
